<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gankWhite"
    tools:context="com.sjl.gank.ui.tab.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_common">

        <TextView
            style="@style/TextAboutTip"
            android:text="@string/gank_about_app_tip" />

        <TextView
            style="@style/TextAboutDesc"
            android:text="@string/gank_about_app_desc" />


        <TextView
            style="@style/TextAboutTip"
            android:text="@string/gank_about_me_tip" />

        <TextView
            style="@style/TextAboutDesc"
            android:text="@string/gank_about_me_desc" />

        <TextView
            style="@style/TextAboutTip"
            android:text="@string/gank_about_lib_tip" />

        <TextView
            style="@style/TextAboutDesc"
            android:autoLink="none"
            android:text="@string/gank_about_lib_desc" />

    </LinearLayout>
</ScrollView>
