<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_title" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gankWhite"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_common"
            android:paddingRight="@dimen/padding_common">

            <TextView
                style="@style/TextAboutTip"
                android:text="@string/gank_about_app_tip" />

            <TextView
                style="@style/TextAboutDesc"
                android:text="@string/gank_about_app_desc" />


            <TextView
                style="@style/TextAboutTip"
                android:text="@string/gank_about_me_tip" />

            <TextView
                style="@style/TextAboutDesc"
                android:text="@string/gank_about_me_desc" />

            <TextView
                style="@style/TextAboutTip"
                android:text="@string/gank_about_lib_tip" />

            <TextView
                style="@style/TextAboutDesc"
                android:autoLink="none"
                android:text="@string/gank_about_lib_desc" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>